@@ -1,5 +1,11 @@
 2010-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* shr.el (shr-add-font): Don't put the font properties on the newline
+	or the indentation.
+
+	* message.el (message-fix-before-sending): Change options when sending
+	non-printable characters.
+
 	* gnus.el (gnus-update-message-archive-method): Change the default to
 	monthly outgoing groups.
 
